tests/paczka1/fuzzy1/26776064.err
Error in line 2: daU A279 42,0
Error in line 5: daU A469 19,2
Error in line 17: A469 A624 90,4
Error in line 28: daU A731 20,5
Error in line 39: TfFY7h9W3f A469 34,1
